--- a/exproto-svr-erlang/rebar.config
+++ b/exproto-svr-erlang/rebar.config
@@ -5,7 +5,8 @@
 ]}.
 
 {deps,
- [{grpc, {git, "https://github.com/emqx/grpc-erl", {tag, "0.6.1"}}}
+ [ jsx,
+  {grpc, {git, "https://github.com/emqx/grpc-erl", {tag, "0.6.2"}}}
 ]}.
 
 {grpc,
@@ -20,8 +21,10 @@
          {clean, {grpc, clean}}]}
  ]}.
 
-{relx, [{release, {exhook_svr, "0.1.0"},
-         [exhook_svr,
+{relx, [{release, {exproto_svr, "0.1.0"},
+         [exproto_svr,
+          jsx,
+          grpc,
           sasl, observer]},
         {sys_config, "./config/sys.config"},
         {vm_args, "./config/vm.args"},
