--- a/exhook-svr-erlang/.gitignore
+++ b/exhook-svr-erlang/.gitignore
@@ -3,3 +3,5 @@ rebar.lock
 apps/exhook_svr/src/emqx_exhook_pb.erl
 apps/exhook_svr/src/emqx_exhook_v_1_hook_provider_client.erl
 apps/exhook_svr/src/emqx_exhook_v_1_hook_provider_bhvr.erl
+apps/exhook_svr/src/emqx_exhook_v_2_hook_provider_client.erl
+apps/exhook_svr/src/emqx_exhook_v_2_hook_provider_bhvr.erl
