--- a/exproto-svr-erlang/.gitignore
+++ b/exproto-svr-erlang/.gitignore
@@ -23,3 +23,5 @@ apps/exproto_svr/src/emqx_exproto_v_1_connection_adapter_bhvr.erl
 apps/exproto_svr/src/emqx_exproto_v_1_connection_adapter_client.erl
 apps/exproto_svr/src/emqx_exproto_v_1_connection_handler_bhvr.erl
 apps/exproto_svr/src/emqx_exproto_v_1_connection_handler_client.erl
+apps/exproto_svr/src/emqx_exproto_v_1_connection_unary_handler_bhvr.erl
+apps/exproto_svr/src/emqx_exproto_v_1_connection_unary_handler_client.erl
