Revert "Update to exhook v3 for 5.9.0"

--- a/exhook-svr-erlang/rebar.config
+++ b/exhook-svr-erlang/rebar.config
@@ -1,14 +1,11 @@
 {erl_opts, [debug_info]}.
 
 {plugins,
- [{grpc_plugin, {git, "https://github.com/HJianBo/grpcbox_plugin", {tag, "v0.10.3"}}}
+ [{grpc_plugin, {git, "https://github.com/HJianBo/grpcbox_plugin", {tag, "v0.10.1"}}}
 ]}.
 
 {deps,
- [
-    {cowlib, "2.13.0"},
-    {cowboy, {git, "https://github.com/emqx/cowboy", {tag, "2.9.3"}}},
-    {grpc, {git, "https://github.com/emqx/grpc-erl", {tag, "0.7.1"}}}
+ [{grpc, {git, "https://github.com/emqx/grpc-erl", {tag, "0.6.4"}}}
 ]}.
 
 {grpc,
